[tool.poetry]
name = "LyuPo7_brain_games"
version = "0.9.0"
description = "First project with Hexlet"
authors = ["LyuPo <lport@frtk.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.games.brain_even:brain_even"
brain_calc = "brain_games.scripts.games.brain_even:brain_calc"
brain_progression = "brain_games.scripts.games.brain_even:brain_progression"
brain_prime = "brain_games.scripts.games.brain_even:brain_prime"

[[tool.poetry.source]]
name = "PyPiTest"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

